bugfix #255440, read stdout and stderr of executed external process